Texture paint slot duplicate or crash happens #42311

Closed
opened 2014-10-20 15:28:19 +02:00 by Leon Cheung · 6 comments
Member

System Information
Win8.1 64bit | GTX680

Blender Version
Broken: 2.72.1 4b42c4b

Short description of error
After adding a texture paint slot, then tweaking settings in F6 menu, it will keep on adding new slots after every single change happen, and sometimes leads to crash,

grs.jpg

Exact steps for others to reproduce the error
Quite intuitive, no blend file needed I suppose. Thanks.

**System Information** Win8.1 64bit | GTX680 **Blender Version** Broken: 2.72.1 4b42c4b **Short description of error** After adding a texture paint slot, then tweaking settings in F6 menu, it will keep on adding new slots after every single change happen, and sometimes leads to crash, ![grs.jpg](https://archive.blender.org/developer/F118546/grs.jpg) **Exact steps for others to reproduce the error** Quite intuitive, no blend file needed I suppose. Thanks.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-10-20 19:33:00 +02:00

This issue was referenced by abb266973d

This issue was referenced by abb266973d45c1a97e5734176662ead99e97a9da

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit abb266973d.

Closed by commit abb266973d.

This issue was referenced by caaeaf922b

This issue was referenced by caaeaf922b341f32a645af0c6bdc9aae10ff2249
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42311
No description provided.