Fix T42311, too many paint slots added.

Don't allow the add paint slot operator to redo. Also guard better against
excessive slot addition